name:                panic
version:             0.2.0.0
synopsis:            A convenient way to panic.
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Panic
  build-depends:       base >= 4.5, gitrev >= 1.0, template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
